--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ option {
   margin-top: -10px !important;
 }
 #btn-submit {
-  width: 20%;
+  width: 30%;
   padding: 14px 0;
   border-radius: 10px;
   background-color: #f2994a;
@@ -196,7 +196,7 @@ option {
   margin-top: 25px;
 }
 .quantity-controller button {
-  margin: 5px 0;
+  margin: 8px 0;
   border: 0;
   background-color: #e0e0e0;
   border-radius: 5px;
@@ -225,4 +225,14 @@ option {
 }
 .buy-detail p:nth-child(2) {
   text-align: right;
+}
+.prodact-remove {
+  margin-top: 5px;
+}
+.remove button {
+  background-color: #f2994a;
+  padding: 5px;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
